WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
215223
Fix warnings related to unsigned >=0 ASSERTs
https://bugs.webkit.org/show_bug.cgi?id=215223
Summary
Fix warnings related to unsigned >=0 ASSERTs
Rob Buis
Reported
2020-08-06 10:06:06 PDT
Fix warnings related to unsigned >=0 ASSERTs by removing the expressions. Example warning: Source/WebCore/editing/TextCheckingHelper.cpp:425:39: warning: comparison of unsigned expression >= 0 is always true [-Wtype-limits]
Attachments
Patch
(7.32 KB, patch)
2020-08-06 10:07 PDT
,
Rob Buis
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Rob Buis
Comment 1
2020-08-06 10:07:59 PDT
Created
attachment 406089
[details]
Patch
EWS
Comment 2
2020-08-07 00:55:15 PDT
Committed
r265364
: <
https://trac.webkit.org/changeset/265364
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 406089
[details]
.
Radar WebKit Bug Importer
Comment 3
2020-08-07 00:56:19 PDT
<
rdar://problem/66668030
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug