Fix warnings related to unsigned >=0 ASSERTs https://bugs.webkit.org/show_bug.cgi?id=215223

Patch by Rob Buis <rbuis@igalia.com> on 2020-08-07
Reviewed by Sergio Villar Senin.

Fix warnings related to unsigned >=0 ASSERTs by removing the expressions. Example warning:
TextCheckingHelper.cpp:425:39: warning: comparison of unsigned expression >= 0 is always true [-Wtype-limits]

* editing/Editor.cpp:
(WebCore::Editor::markAndReplaceFor):
* editing/TextCheckingHelper.cpp:
(WebCore::TextCheckingHelper::findFirstMisspelledWordOrUngrammaticalPhrase const):
(WebCore::TextCheckingHelper::findUngrammaticalPhrases const):
(WebCore::TextCheckingHelper::guessesForMisspelledWordOrUngrammaticalPhrase const):

Canonical link: https://commits.webkit.org/228042@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@265364 268f45cc-cd09-0410-ab3c-d52691b4dbfc